# peloton

./: Makefile  db.sqlite3  manage.py  pyproject.toml
deploy/: passenger_wsgi.py  settings.py
peloton/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_auto_20210414_1646.py  0003_auto_20210414_1713.py  0004_auto_20210414_1714.py  0005_auto_20210414_1718.py  0006_orderline_email_alter_product_year.py  0007_remove_orderline_email_orderline_name.py  0008_remove_orderline_name_orderline_email.py  0009_remove_orderline_email_remove_product_cast_and_more.py  0010_alter_order_phone_alter_product_ves.py  0011_order_surname_alter_order_phone.py  0012_alter_order_phone.py  0013_blogpost_blogcomment.py  0014_delete_blogcomment_delete_blogpost.py  0015_reviews.py  0016_remove_reviews_email_remove_reviews_name_and_more.py  0017_name_delete_reviews.py  0018_review_delete_name.py  0019_alter_review_name.py  0020_rename_otziv_review_rev.py  0021_order_time.py  0022_remove_order_time.py  0023_job.py  0024_alter_job_options_job_obyazanosti_alter_job_opit_and_more.py  0025_alter_order_phone.py  0026_order_date_delivery_alter_order_phone.py  0027_alter_review_options_alter_order_date_delivery_and_more.py  0028_alter_order_date_delivery.py  0029_category_section_section.py  0030_rename_section_section_category.py
shop/templates/: 404.html  addorder.html  cart.html  contacts.html  delivery.html  index.html  job.html  main.html  order.html  orders.html  peloton.html  product.html  (+3 more)
(+18 files in other folders)
