[tool.poetry]
name = "peloton"
version = "0.1.0"
description = ""
authors = ["gReen7aRRow <f.gusarov@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1.7"
pillow = "9.4.0"
asgiref = "^3.6.0"
phonenumbers = "8.13.7"
django-bootstrap3 = "22.2"
django-crispy-forms = "^2.0"
setuptools = "49.2.1"
sqlparse = "^0.4.3"
tzdata = "2022.7"
django-phonenumber-field = "7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
